--- a/index.html
+++ b/index.html
@@ -238,9 +238,12 @@ function validateCounts(tiles){
   const c=new Map(); for(const t of tiles){ c.set(t,(c.get(t)||0)+1) }
   for(const [t,count] of c){ if(t!=='X' && count>4) throw new Error(`牌 ${t} 數量超過4張，請檢查輸入。`) }
 }
+
+/* 解析輸入；限制最多 17 張（少於 4 張不在此處阻擋，交由分析階段提示） */
 function parseTiles(input){
   let parts=normalizeInput(input); if(!parts) return [];
   let tokens=parts.split(/\s+/).filter(Boolean);
+
   if(tokens.length===1){
     const s=tokens[0]; const out=[];
     for(let i=0;i<s.length;){
@@ -257,15 +260,19 @@ function parseTiles(input){
             if(suit==='z' && !(1<=n&&n<=7)) throw new Error(`無效的字牌: ${d}z`);
             if('mts'.includes(suit) && !(1<=n&&n<=9)) throw new Error(`無效的數字: ${d}，花色 ${suit} 應為 1-9`);
             out.push(d+suit);
+            if(out.length>17) throw new Error(`牌張數最多 17 張，目前已達 ${out.length} 張`);
           }
         } else { throw new Error(`格式錯誤：數字 ${digits} 後缺少花色`); }
       } else { throw new Error(`無效的字元: ${ch}`) }
     }
-    validateCounts(out); return out;
+    validateCounts(out);
+    if(out.length>17) throw new Error(`牌張數最多 17 張，目前為 ${out.length} 張`);
+    return out;
   }
+
   const res=[];
   for(const tk of tokens){
-    if(tk.toUpperCase()==='X'){ res.push('X'); continue }
+    if(tk.toUpperCase()==='X'){ res.push('X'); if(res.length>17) throw new Error(`牌張數最多 17 張，目前已達 ${res.length} 張`); continue }
     let i=0, digits='';
     while(i<tk.length){
       const ch=tk[i];
@@ -276,15 +283,19 @@ function parseTiles(input){
           if(ch==='z' && !(1<=n&&n<=7)) throw new Error(`無效的字牌: ${d}z`);
           if('mts'.includes(ch) && !(1<=n&&n<=9)) throw new Error(`無效的數字: ${d}，花色 ${ch} 應為 1-9`);
           res.push(`${d}${ch}`);
+          if(res.length>17) throw new Error(`牌張數最多 17 張，目前已達 ${res.length} 張`);
         }
         digits=''; i++;
-      } else if(ch.toUpperCase()==='X'){ res.push('X'); i++; }
+      } else if(ch.toUpperCase()==='X'){ res.push('X'); i++; if(res.length>17) throw new Error(`牌張數最多 17 張，目前已達 ${res.length} 張`); }
       else { throw new Error(`無效的字元: ${ch}`); }
     }
     if(digits) throw new Error(`格式錯誤：數字後缺少花色 (${digits})`);
   }
-  validateCounts(res); return res;
+  validateCounts(res);
+  if(res.length>17) throw new Error(`牌張數最多 17 張，目前為 ${res.length} 張`);
+  return res;
 }
+
 function isTriplet(trio){ return trio.length===3 && trio[0]===trio[1] && trio[1]===trio[2] }
 function isSequence(trio){
   if(trio.length!==3) return false;
@@ -490,9 +501,11 @@ unicodeHandEl.addEventListener('click', (e)=>{
   }catch(_){}
 });
 
-/* ======= 牌面按鈕 4 張上限 ======= */
+/* ======= 牌面按鈕 4 張上限 + 總張數 17 上限 ======= */
 const tileCounts = new Map(); // 依輸入即時計數
-
+function totalCount(){
+  let sum = 0; for (const v of tileCounts.values()) sum += v; return sum;
+}
 function recountFromInput(){
   tileCounts.clear();
   try {
@@ -502,12 +515,12 @@ function recountFromInput(){
     // 無效中間狀態：忽略
   }
 }
-
 function updateKeyboardState(){
+  const tot = totalCount();
   document.querySelectorAll('.kbd .key[data-tile]').forEach(btn=>{
     const code = btn.dataset.tile;
     const cnt = tileCounts.get(code) || 0;
-    btn.disabled = cnt >= 4;
+    btn.disabled = (cnt >= 4) || (tot >= 17);
     btn.setAttribute('aria-disabled', btn.disabled ? 'true':'false');
   });
 }
@@ -516,6 +529,10 @@ function updateKeyboardState(){
 function insertText(t){
   const cnt = (tileCounts.get(t) || 0);
   if (cnt >= 4) return;
+  // 阻擋總張數超過 17
+  const tot = totalCount();
+  if (tot >= 17) return;
+
   const cur=tilesInput.value;
   tilesInput.value=(cur?cur.replace(/\s+$/,'')+' ':'')+t+' ';
   tileCounts.set(t, cnt+1);
@@ -570,6 +587,7 @@ function fireFormat(){
     recountFromInput();
     updateKeyboardState();
   }catch(e){
+    // 若是超過 17 張等錯誤，這裡不擾民，只更新鍵盤狀態
     recountFromInput();
     updateKeyboardState();
   }
@@ -579,6 +597,7 @@ function fireFormat(){
 document.getElementById('btnCheck').addEventListener('click',()=>{
   try{
     const tiles=parseTiles(tilesInput.value); const n=tiles.length; setUnicodeHand(tiles);
+
     if(VALID_TING.has(n)){
       const ting=analyzeTingTilesOnly(tiles);
       if(ting.length===0){ setResult('此牌組尚未聽牌。'); }
