--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
           <div class="section-title">輸入手牌</div>
           <div class="field" style="margin-bottom:8px">
             <input id="tilesInput" type="text" inputmode="latin" autocomplete="off" autocapitalize="off" spellcheck="false" placeholder="輸入牌組或使用下方牌面鍵盤" />
+            <!-- 新增：整理按鈕 -->
+            <button class="btn sm" id="btnSort" type="button" title="依鍵盤順序整理">整理</button>
           </div>
 
           <!-- 當前手牌（無邊框麻雀按鈕，點擊刪除） -->
@@ -577,6 +579,38 @@ document.getElementById('keyBack').addEventListener('click',()=>{
   recountFromInput();
   fireFormat();
   updateKeyboardState();
+});
+
+/* === 整理：依「快速鍵盤順序」排序（筒→索→萬→字→X） === */
+function sortTilesByKeyboardOrder(arr){
+  const suitOrder = { 't':0, 's':1, 'm':2, 'z':3, 'X':4 };
+  return arr.slice().sort((a,b)=>{
+    const sa = a === 'X' ? 'X' : a[1];
+    const sb = b === 'X' ? 'X' : b[1];
+    const oa = suitOrder[sa] ?? 99;
+    const ob = suitOrder[sb] ?? 99;
+    if(oa !== ob) return oa - ob;
+
+    // 同花色：數字小到大；字牌 1–7；X 已分在最後不進此分支
+    const na = a === 'X' ? 0 : parseInt(a[0],10);
+    const nb = b === 'X' ? 0 : parseInt(b[0],10);
+    return na - nb;
+  });
+}
+document.getElementById('btnSort').addEventListener('click', ()=>{
+  try{
+    const tiles = parseTiles(tilesInput.value);
+    const sorted = sortTilesByKeyboardOrder(tiles);
+    writeTiles(sorted);
+    fireFormat();
+    updateKeyboardState();
+  }catch(e){
+    // 若輸入有誤（例如超過 17 張等），給個溫和提示
+    const toast = document.getElementById('toast');
+    toast.textContent = '無法整理：' + e.message;
+    toast.classList.add('show');
+    setTimeout(()=>toast.classList.remove('show'), 1600);
+  }
 });
 
 /* 即時格式化（同步「當前手牌」按鈕與鍵盤狀態） */
